# solarreader

./: .gitignore  Cargo.toml  README.md  depfile
.cargo/: Cargo.toml  config
epubs/: wallace-sandi-the-kingmaker.epub  wallace-sandi-the-kingmaker.mobi
src/: lib.rs  main.rs
src/lib/meta/: mod.rs
src/lib/meta/field/: title.rs
src/meta/: mod.rs
src/meta/field/: cover.rs  mod.rs  subject.rs
tools/: rp2040js.patch  run.sh
