[package]
name = "solarreader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epub = "2.1.1"
thiserror = "1.0.56"
serde = "1.0.195"
dotenvy = "0.15.7"
rayon = "1.8.1"
miette = {version = "5.10.0", features = ["fancy"]}

[dev-dependencies]
divan = "0.1.11"
